# telemachus

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs-deploy.yml
datasets/: .gitignore  INDEX.yaml  README.md
datasets/aegis/: README.md  SHA256SUMS  manifest.yaml
datasets/pvs/: .gitignore  README.md  SHA256SUMS  manifest.yaml
datasets/rs3/: README.md  SHA256SUMS  manifest.yaml
datasets/stride/: README.md  SHA256SUMS  manifest.yaml
docs/: CNAME  about.en.md  about.fr.md  concepts.en.md  concepts.fr.md  index.en.md  index.fr.md  migration.en.md  migration.fr.md  quickstart.en.md  quickstart.fr.md  rfcs.en.md  rfcs.fr.md
docs/guide/: converting-open-data.en.md  converting-open-data.fr.md  manifest-faq.en.md  manifest-faq.fr.md  open-sources-matrix.en.md  open-sources-matrix.fr.md  reading-d0.en.md  reading-d0.fr.md  reading-data.en.md  reading-data.fr.md  reproducing-pvs.en.md  reproducing-pvs.fr.md  validating.en.md  validating.fr.md  writing-adapter.en.md  writing-adapter.fr.md
docs/notebooks/: aegis-demo.ipynb
python-cli/: README.md
python-cli/cli/: main.py
python-cli/cli/adapters/: __init__.py  aegis.py  pvs.py  uah_driveset.py
python-sdk/: .gitignore  README.md  pyproject.toml  requirements.txt
python-sdk/.github/workflows/: ci.yml  python-tests.yml
python-sdk/examples/: quickstart.ipynb
python-sdk/examples/examples/: dataset.yaml  geotab.json  geotab.parquet
python-sdk/telemachus/: __init__.py  _api.py  _validate_legacy.py  cli.py  dataset.py  io.py  io_export.py  io_import.py  models.py  validate.py
python-sdk/telemachus/adapters/: __init__.py  aegis.py  pvs.py  stride.py
python-sdk/telemachus/core/: dataset.py  errors.py  models.py  schemas.py  semantics.py  validate_tables.py
python-sdk/telemachus/metrics/: __init__.py  basic.py
python-sdk/telemachus/pandas/: __init__.py  frame.py  io.py  validate.py
python-sdk/telemachus/schemas/: manifest_schema.py
python-sdk/tests/: test_adapters.py  test_core_negative.py  test_dataset.py  test_export.py  test_io.py  test_manifest.py  test_pandas_bridge.py  test_parquet.py  test_tcs.py
python-sdk/tests/fixtures/: invalid_missing_position.json  sample.jsonl  valid_minimal.json  with_engine_imu.json
spec/: CHANGELOG.md  README.md  SPEC-01-data-layers.md  SPEC-01-record-format.md  SPEC-02-manifest.md  SPEC-03-adapters-validation.md  SPEC-04-governance.md
spec/docs/: 01_introduction.md  02_state_of_the_art.md  03_spec_core.md  04_examples.md  05_provider_mappings.md  06_tcs.md  07_contexts.md  08_versioning.md  09_glossary.md  10_roadmap.md  index.md  open-datasets.md
spec/rfcs/: RFC-0001-telemachus-core-0.2.md  RFC-0002-comparative-apis.md  RFC-0003-dataset-specification-0.2.md  RFC-0004-extended-fieldgroups-schema.md  RFC-0005–adapter-architecture.md  RFC-0007-validation-framework-and-cli-rules.md  RFC-0009-rs3-integration-pipeline.md  RFC-0011-versioning-and-governance-policy.md  RFC-0013-d0-device-layer.md  RFC-0014-dataset-manifest-0.8.md  ROADMAP.md
spec/schemas/: telemachus_core_v0.2.json  telemachus_manifest_v0.8.json
